Fix home page layout Home page image was taking full height, which was not aligning with Chirpy's layout. I'll probably move to a masonry layout later, but for now, let me keep this aligned with Chirpy.

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -5,9 +5,13 @@
 
 /* append your custom style below */
 
-.preview-img, .preview-img img {
+.post-meta .preview-img, .post-meta .preview-img img {
   border-radius: 0 !important;
   aspect-ratio: auto;
+}
+
+.post-preview .preview-img, .post-preview .preview-img img {
+  aspect-ratio: 40/21;
 }
 
 #sidebar #avatar {
